--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e js, graphql index"
+    "dev": "nodemon -e js, graphql index",
+    "lint": "standard",
+    "lintFix": "standard --fix"
   },
   "author": "Irungaray",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0"
+  },
+  "devDependencies": {
+    "standard": "^16.0.3"
   }
 }
